<resources>
    <string name="app_name">textAdventure</string>


    <string name="fileCharacter">characterData</string>
    <string name="fileEncounter">fileEncounters</string>

    <string name="Starting_Gold">10</string>
    <string name="Starting_Item">1</string>

    <string name="Strength">Strength</string>
    <string name="Intelligence">Intelligence</string>
    <string name="Speed">Speed</string>
    <string name="Constitution">Constitution</string>

    <string name="Wizard_Details">Attack focused ranged</string>
    <string name="Warrior_Details">Attack focused melee</string>
    <string name="Paladin_Details">Tank focused melee</string>
    <string name="Archer_Details">Stealth focused ranged</string>

    <string name="Wizard">Wizard</string>
    <string name="Warrior">Warrior</string>
    <string name="Paladin">Paladin</string>
    <string name="Archer">Archer</string>

    <string name="Wizard_Start_Attack">1</string>
    <string name="Warrior_Start_Attack">1</string>
    <string name="Paladin_Start_Attack">1</string>
    <string name="Archer_Start_Attack">1</string>

    <string name="Wizard_Start_Str">0</string>
    <string name="Wizard_Start_Int">10</string>
    <string name="Wizard_Start_Con">3</string>
    <string name="Wizard_Start_Spd">4</string>

    <string name="Paladin_Start_Str">5</string>
    <string name="Paladin_Start_Int">4</string>
    <string name="Paladin_Start_Con">10</string>
    <string name="Paladin_Start_Spd">0</string>

    <string name="Archer_Start_Str">7</string>
    <string name="Archer_Start_Int">5</string>
    <string name="Archer_Start_Con">2</string>
    <string name="Archer_Start_Spd">8</string>

    <string name="Warrior_Start_Str">10</string>
    <string name="Warrior_Start_Int">0</string>
    <string name="Warrior_Start_Con">6</string>
    <string name="Warrior_Start_Spd">2</string>

    <string name="Wizard_Start_Ability">3</string>
    <string name="Warrior_Start_Ability">4</string>
    <string name="Paladin_Start_Ability">6</string>
    <string name="Archer_Start_Ability">5</string>

    <string name="Wizard_Start_Weapon">1</string>
    <string name="Warrior_Start_Weapon">1</string>
    <string name="Paladin_Start_Weapon">1</string>
    <string name="Archer_Start_Weapon">1</string>

    <string name="full_on">You are full on </string>
    <string name="not_enough_gold">You do not have enough gold for that</string>
    <string name="already_added">This is already added to your inventory</string>

    <string name="abandon">Abandon</string>
    <string name='new_game'>New Game</string>
    <string name='continue_game'>Continue</string>

    <string name='leave_encounter'>Move on</string>
    <string name='font'>press_start_2p</string>
    <string name="drop_button">Drop</string>
    <string name="consume_button">Consume</string>

    <string name="intelligence_short">INT</string>
    <string name="strength_short">STR</string>
    <string name="constitution_short">CON</string>
    <string name="speed_short">SPD</string>

    <string name="ability_plural">Abilities</string>
    <string name="weapon_plural">Weapons</string>
    <string name="item_plural">Items</string>

    <string name="dot_plural">Dots</string>
    <string name="special_plural">Special Effects</string>
    <string name="stat_plural">Stats</string>

    <string name='pick_up_inventory'>Pick Up</string>
    <string name="leave_inventory">Leave</string>

    <string name='continue_dialogue'>Continue</string>

    <string name='category_weapons_option'>Weapons</string>
    <string name='category_abilities_option'>Abilities</string>
    <string name='category_items_option'>items</string>

    <string name="btn_run">Run</string>
    <string name="btn_continue">Continue</string>

    <string name="popup_close">Close</string>

    <string name="buy">Buy</string>
    <string name="sell">Sell</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
