<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="characterVM"
            type="com.habbybolan.textadventure.viewmodel.characterEntityViewModels.CharacterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".view.characterfragment.CharacterFragment">

        <LinearLayout
            android:id="@+id/character_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/items_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inventoryEntity"
                    android:layout_width="111dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginTop="24dp"
                    android:text="@string/item_plural"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_item_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginEnd="@dimen/character_frag_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/inventoryEntity" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/weapons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/weapons"
                    android:layout_width="103dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginTop="24dp"
                    android:text="@string/weapon_plural"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_weapon_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginEnd="@dimen/character_frag_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weapons" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/abilities_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/abilities"
                    android:layout_width="112dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginTop="24dp"
                    android:text="@string/ability_plural"
                    android:textAlignment="viewStart"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ability_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginEnd="@dimen/character_frag_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/abilities"
                    tools:listitem="@layout/character_ability_list_details" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/stats"
                    android:layout_width="109dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/character_frag_title"
                    android:layout_marginTop="20dp"
                    android:text="@string/stat_plural"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Stats" />

                <TextView
                    android:id="@+id/strength"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="12dp"
                    android:textSize="@dimen/txt_size_medium"
                    android:text="@string/strength_short"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats" />

                <TextView
                    android:id="@+id/strNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_size_small"
                    app:stat="@{characterVM.strength}"
                    app:base="@{characterVM.strBase}"
                    app:layout_constraintEnd_toEndOf="@+id/strength"
                    app:layout_constraintStart_toStartOf="@+id/strength"
                    app:layout_constraintTop_toBottomOf="@+id/strength" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="32dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/speed_short"
                    android:textSize="@dimen/txt_size_medium"
                    app:layout_constraintStart_toEndOf="@+id/constitution"
                    app:layout_constraintTop_toBottomOf="@+id/stats" />

                <TextView
                    android:id="@+id/spdNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_size_small"
                    app:stat="@{characterVM.speed}"
                    app:base="@{characterVM.spdBase}"
                    app:layout_constraintEnd_toEndOf="@+id/speed"
                    app:layout_constraintStart_toStartOf="@+id/speed"
                    app:layout_constraintTop_toBottomOf="@+id/speed" />

                <TextView
                    android:id="@+id/intelligence"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/intelligence_short"
                    android:textSize="@dimen/txt_size_medium"
                    app:layout_constraintStart_toEndOf="@+id/strength"
                    app:layout_constraintTop_toBottomOf="@+id/stats" />

                <TextView
                    android:id="@+id/intNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_size_small"
                    app:base="@{characterVM.intBase}"
                    app:layout_constraintEnd_toEndOf="@+id/intelligence"
                    app:layout_constraintStart_toStartOf="@+id/intelligence"
                    app:layout_constraintTop_toBottomOf="@+id/intelligence"
                    app:stat="@{characterVM.intelligence}" />

                <TextView
                    android:id="@+id/constitution"
                    android:layout_width="32dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/constitution_short"
                    android:textSize="@dimen/txt_size_medium"
                    app:layout_constraintStart_toEndOf="@+id/intelligence"
                    app:layout_constraintTop_toBottomOf="@+id/stats" />

                <TextView
                    android:id="@+id/conNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:gravity="center"
                    android:textSize="@dimen/txt_size_small"
                    app:stat="@{characterVM.constitution}"
                    app:base="@{characterVM.conBase}"
                    app:layout_constraintEnd_toEndOf="@+id/constitution"
                    app:layout_constraintStart_toStartOf="@+id/constitution"
                    app:layout_constraintTop_toBottomOf="@+id/constitution" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/effects_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/dotLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_side_inside_scroll"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dots"
                        android:layout_width="128dp"
                        android:layout_height="24dp"
                        android:text="@string/dot_plural"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_dots"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/specialLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_side_inside_scroll"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/specials"
                        android:layout_width="128dp"
                        android:layout_height="24dp"
                        android:gravity="center"
                        android:text="@string/special_plural"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_special_effects"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</layout>